--- a/src/main/resources/templates/groups/index.html
+++ b/src/main/resources/templates/groups/index.html
@@ -26,9 +26,11 @@
                             Parent
                         </th>
                         <th>
+                            Type
+                        </th>
+                        <th>
                             Sample Count
-                    <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"
-                          title="Excluding children groups'"></span>
+                            <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip" title="Excluding children groups'"></span>
                         </th>
                         <th>
                             Details
@@ -55,6 +57,9 @@
                         </td>
                         <td class="parent">
                             {{ parent.name }}
+                        </td>
+                        <td class="type">
+                            {{ type.value }}
                         </td>
                         <td class="count">
                             {{ samples.length }}
