--- a/src/main/resources/templates/groups/table.html
+++ b/src/main/resources/templates/groups/table.html
@@ -6,14 +6,18 @@
 </head>
 <body>
 
-<div th:fragment="groupstable (appendBeforeId, loadMoreId, metadataId)">
+<div th:fragment="groupstable (appendBeforeId, loadMoreId, metadataId, checkbox)">
     <div th:fragment="table (appendBeforeId, loadMoreId, metadataId)">
         <div class="text-muted pull-right jqp-metadata" th:id="${metadataId}">
         </div>
-        <table class="table table-striped table-condensed jqp-groups">
+        <table class="table table-condensed jqp-groups" th:classappend="${checkbox ? 'table-hover' : ''}">
             <tr>
+                <th th:if="${checkbox}"></th>
                 <th>
                     Name
+                </th>
+                <th>
+                    Type
                 </th>
                 <th>
                     Sample Count
@@ -33,9 +37,15 @@
     </div>
 
     <script id="group-template" type="text/x-handlebars-template" th:fragment="template">
-        <tr>
+        <tr id="{{ id }}" th:class="${checkbox ? 'selectable' : ''}">
+            <td th:if="${checkbox}">
+                <input type="checkbox" value="{{ id }}" name="groups" />
+            </td>
             <td>
                 {{ name }}
+            </td>
+            <td>
+                {{ type.value }}
             </td>
             <td>
                 {{ samples.length }}
