Cleanup, fetch samples by group ids WIP

--- a/src/main/resources/templates/groups/show.html
+++ b/src/main/resources/templates/groups/show.html
@@ -129,7 +129,7 @@
             id = id.split("-")[1];
 
             $(this).pager({
-                url: '/samples/byGroup/' + id + '/json',
+                url: '/samples/byGroup/' + id,
                 template: '#sample-template',
                 loadButton: '#load-' + id,
                 appendBefore: '#append-' + id,
