--- a/src/main/resources/templates/samples/show.html
+++ b/src/main/resources/templates/samples/show.html
@@ -35,13 +35,13 @@
             <div class="status">
                 <h3>Status</h3>
 
-                <p class="text-capitalize" th:text="*{status.value}"></p>
+                <p th:text="*{status.value}"></p>
             </div>
 
             <div class="type">
                 <h3>Type</h3>
 
-                <p class="text-uppercase" th:text="*{type.value}"></p>
+                <p th:text="*{type.value}"></p>
             </div>
 
             <div class="groups">
